# taskone

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml  sensitivity.yaml
reports/: report.md
results/: main_summary.csv  noise_study_summary.csv  sensitivity.csv  statistics.csv  wilcoxon.csv
results/noise_study_stats/: statistics.csv  wilcoxon.csv
scripts/: make_figures.py  run_experiments.py  run_noise_study.py  run_sensitivity.py
src/noisy_opt/: __init__.py  algorithms.py  evaluation.py  experiment.py  plots.py  problem.py  statistics.py
tests/: test_algorithms.py  test_problem.py
